fix(WI-quick-add): Remove redundant scrollbar from description

--- a/src/app/components/work-item-quick-add/work-item-quick-add.component.less
+++ b/src/app/components/work-item-quick-add/work-item-quick-add.component.less
@@ -40,10 +40,12 @@
     &-story {
       padding-right: 70px;
       padding-left: 42px;
-      textarea[class='f8-quickadd-desc'] {
-        max-height: 100px;
-        height: 26px !important;
-        padding-top: 0;
+      textarea.f8-quickadd-desc {
+        bottom: -25px;
+        max-height: 200px;
+        max-width: 407px;
+        position: absolute;
+        resize: none;
       }
     }
     &-btn {
@@ -94,10 +96,11 @@
     margin-left: 0;
     background: @color-pf-white;
     .Border(2px, solid, @color-pf-black-400);
-    textarea[class="f8-quickadd-desc"] {
+    textarea.f8-quickadd-desc {
       width: 100%;
       height: 29px;
       margin-top: 5px;
+      resize: none;
     }
     &-btn-add {
       margin-top: 5px;
@@ -124,6 +127,6 @@
 }
 @-moz-document url-prefix() {
   .f8-quickadd__wiblk-story {
-    textarea[class="f8-quickadd-desc"] { max-height: 26px !important; }
+    textarea.f8-quickadd-desc { max-height: 26px !important; }
   }
 }
